tools/hermes/tests/fixtures/design_doc/expected.stderr

=== Hermes Verification Failed ===

[Hermes Error] hermes::doc_block

  × Documentation block error: `requires` sections are only permitted on
  │ `unsafe` functions.
    ╭─[[PROJECT_ROOT]/src/lib.rs:55:1]
 54 │ /// ```lean, hermes
 55 │ /// requires stack.len > 0
    · ─────────────┬────────────
    ·              ╰── problematic block
 56 │ /// ensures stack'.len = stack.len - 1
    ╰────

Error: Aborting due to 1 previous errors.
